fix formatting of user-contribution comment by removing word-wrapping which didn't get got wraps for comments with markup

--- a/skins/dragon/screen.css
+++ b/skins/dragon/screen.css
@@ -1788,7 +1788,7 @@ body.People table.People td.Rubric {
    text-decoration: none;
    font-weight: normal;
    color: black;
-   width: 40%;
+   width: 25%;
 }
 
 body.People table.People td.People {
